@@ -1,3 +1,8 @@
+2006-02-02  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Ouch, fixed broken converter pipeline.
+	* soundconverter.glade: Fixed broken progressbar.
+
 2006-02-01  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: We will now use gst_parse_launch() to create a
